--- a/treasurehunt.html
+++ b/treasurehunt.html
@@ -63,7 +63,7 @@
       // Display the image if correct
       const img = document.createElement('img');
       img.src = 'cachecache.png'; // Replace with your actual image file name or URL
-      img.alt = 'Treasure Found!';
+      img.alt = 'Correct! At the end of the day, you know yourself the best - but seeing your choices helps me understand you better. I love you';
       answerSection.appendChild(img);
     } else {
       // Otherwise show Try again!
