--- a/treasurehunt.html
+++ b/treasurehunt.html
@@ -12,22 +12,30 @@
   label, input {
     font-size: 1.2em;
   }
-  #answerSection, #answersList {
+  #answerSection {
     margin-top: 1em;
     font-size: 1.2em;
     font-weight: bold;
-  }
-  #answersList {
-    display: none;
-  }
-  button {
-    margin-top: 1em;
-    font-size: 1em;
   }
   img {
     margin-top: 1em;
     max-width: 300px;
     display: block;
+  }
+  button {
+    margin-top: 1em;
+    font-size: 1em;
+    display: inline-block;
+    margin-right: 10px;
+  }
+  .clue-container {
+    margin-top: 2em;
+  }
+  .clue-answer {
+    display: none;
+    margin-top: 0.5em;
+    font-size: 1.2em;
+    font-weight: bold;
   }
 </style>
 </head>
@@ -40,19 +48,21 @@
 
 <div id="answerSection"></div>
 
-<button id="showAnswersButton">SHOW ANSWERS FOR TREASURE HUNT</button>
-<div id="answersList">
-  1. LA FACTORY<br>
-  2. Le petit Souk<br>
-  3. Cache Cache
+<div class="clue-container">
+  <button id="showClue1Button">Show Clue 1</button>
+  <div id="clue1" class="clue-answer">LA FACTORY</div>
+  
+  <button id="showClue2Button">Show Clue 2</button>
+  <div id="clue2" class="clue-answer">Le petit Souk</div>
+  
+  <button id="showClue3Button">Show Clue 3</button>
+  <div id="clue3" class="clue-answer">Cache Cache</div>
 </div>
 
 <script>
   const checkButton = document.getElementById('checkButton');
   const userInput = document.getElementById('userInput');
   const answerSection = document.getElementById('answerSection');
-  const showAnswersButton = document.getElementById('showAnswersButton');
-  const answersList = document.getElementById('answersList');
 
   const validAnswers = ["cache cache", "cachecache", "cache-cache"];
 
@@ -71,8 +81,14 @@
     }
   });
 
-  showAnswersButton.addEventListener('click', function() {
-    answersList.style.display = 'block';
+  document.getElementById('showClue1Button').addEventListener('click', function() {
+    document.getElementById('clue1').style.display = 'block';
+  });
+  document.getElementById('showClue2Button').addEventListener('click', function() {
+    document.getElementById('clue2').style.display = 'block';
+  });
+  document.getElementById('showClue3Button').addEventListener('click', function() {
+    document.getElementById('clue3').style.display = 'block';
   });
 </script>
 
