--- a/treasurehunt.html
+++ b/treasurehunt.html
@@ -49,13 +49,13 @@
 <div id="answerSection"></div>
 
 <div class="clue-container">
-  <button id="showClue1Button">Show Clue 1</button>
+  <button id="showClue1Button">Show Clue 1's Answer</button>
   <div id="clue1" class="clue-answer">LA FACTORY</div>
   
-  <button id="showClue2Button">Show Clue 2</button>
+  <button id="showClue2Button">Show Clue 2's Answer</button>
   <div id="clue2" class="clue-answer">Le petit Souk</div>
   
-  <button id="showClue3Button">Show Clue 3</button>
+  <button id="showClue3Button">Show Clue 3's Answer</button>
   <div id="clue3" class="clue-answer">Cache Cache</div>
 </div>
 
